--- a/analysis/PCAWG_pathways.Rmd
+++ b/analysis/PCAWG_pathways.Rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(comment = '', fig.width = 6,
 
 ```{r load-packages, message=FALSE}
 library(here)
+library("cowplot")
 fig.dir = here("figures/pathways_analysis")
 
 if(! file.exists(fig.dir)){
@@ -312,38 +313,38 @@ write.table(as.data.frame(tissues.odds.ratio.lists$neg.tissues),
 ```
 
 
-<!-- ### Linear regression predicting signatures from pathways across tissues -->
+### Linear regression predicting signatures from pathways across tissues
 
-<!-- I tried logging the signatures before the linear regression or using raw counts. -->
-<!-- In this first case, I tried logging.  -->
+I tried logging the signatures before the linear regression or using raw counts.
+In this first case, I tried logging.
 
 
-<!-- ```{r, warning = FALSE} -->
-<!-- tissue.lm.coefs.mats.log = pcawg_sig_pathway_int(sigs.input = PCAWG.full.subset.ann.pathways, -->
-<!--                                  pathways.input = PCAWG.pathways.tissues, -->
-<!--                                  interaction_function = get_sig_path_lms,  -->
-<!--                                  robust = FALSE, -->
-<!--                                  path.min.tissues = 30, -->
-<!--                                  p.val.threshold = 0.1, -->
-<!--                                  p.adjust = TRUE, -->
-<!--                                  method = "BH", -->
-<!--                                  sig.log = TRUE, -->
-<!--                                  path.to.sig = TRUE) -->
+```{r, warning = FALSE}
+tissue.lm.coefs.mats.log = pcawg_sig_pathway_int(sigs.input = PCAWG.full.subset.ann.pathways,
+                                 pathways.input = PCAWG.pathways.tissues,
+                                 interaction_function = get_sig_path_lms,
+                                 robust = FALSE,
+                                 path.min.tissues = 30,
+                                 p.val.threshold = 0.1,
+                                 p.adjust = TRUE,
+                                 method = "BH",
+                                 sig.log = TRUE,
+                                 path.to.sig = TRUE)
 
-<!-- for (tissue in abundant.tissues) { -->
-<!--     cat(tissue, "\n")    -->
-<!--     if (any(abs(tissue.lm.coefs.mats.log[[tissue]]) > 0) ) { -->
-<!--         int.heatmap = ggheatmap_wrapper(tissue.lm.coefs.mats.log[[tissue]],  -->
-<!--                                         title = tissue) -->
+for (tissue in abundant.tissues) {
+    cat(tissue, "\n")
+    if (any(abs(tissue.lm.coefs.mats.log[[tissue]]) > 0) ) {
+        int.heatmap = ggheatmap_wrapper(tissue.lm.coefs.mats.log[[tissue]],
+                                        title = tissue)
 
-<!--         ggsave(plot = int.heatmap, -->
-<!--                filename = file.path(fig.dir, "pathway_to_signature", -->
-<!--                                     "by_tissues", "lm_log",  -->
-<!--                                     paste0("PCAWG_", tissue, "_sig_tilde_pathway.dotplot.png")), -->
-<!--                height = 5, width = 6, bg = "white") -->
-<!--     } -->
-<!-- } -->
-<!-- ``` -->
+        ggsave(plot = int.heatmap,
+               filename = file.path(fig.dir, "pathway_to_signature",
+                                    "by_tissues", "lm_log",
+                                    paste0("PCAWG_", tissue, "_sig_tilde_pathway.dotplot.png")),
+               height = 5, width = 6, bg = "white")
+    }
+}
+```
 
 <!-- In the example below I'm trying with raw counts. -->
 
@@ -374,24 +375,24 @@ write.table(as.data.frame(tissues.odds.ratio.lists$neg.tissues),
 <!-- } -->
 <!-- ``` -->
 
-<!-- #### Summarizing the regression of signatures ~ pathways -->
+#### Summarizing the regression of signatures ~ pathways
 
-<!-- ```{r, fig.width=6, fig.height=4, warning= FALSE} -->
-<!-- pp.logged = plot_all_counts(tissue.lm.coefs.mats.log, threshold = 0.2, psize = 5) -->
-<!-- print(pp.logged) -->
+```{r, fig.width=6, fig.height=4, warning= FALSE}
+pp.logged = plot_all_counts(tissue.lm.coefs.mats.log, threshold = 0.2, psize = 5)
+print(pp.logged)
 
-<!-- ggsave(plot = pp.logged, -->
-<!--                filename = file.path(fig.dir, "pathway_to_signature",  -->
-<!--                                     "by_tissues", "lm_log",  -->
-<!--                                     "PCAWG_logged_summarized_OLS.png"), -->
-<!--                height = 2.3, width = 2.9, bg = "white") -->
+ggsave(plot = pp.logged,
+               filename = file.path(fig.dir, "pathway_to_signature",
+                                    "by_tissues", "lm_log",
+                                    "PCAWG_logged_summarized_OLS.png"),
+               height = 2.3, width = 2.9, bg = "white")
 
-<!-- ggsave(plot = pp.logged, -->
-<!--                filename = file.path(fig.dir, "pathway_to_signature",  -->
-<!--                                     "by_tissues", "lm_log", "PCAWG_logged_summarized_OLS_path_to_sigs.pdf"), -->
-<!--                height = 2.3, width = 2.9, bg = "white", device = cairo_pdf, family = "DejaVu Sans") -->
+ggsave(plot = pp.logged,
+               filename = file.path(fig.dir, "pathway_to_signature",
+                                    "by_tissues", "lm_log", "PCAWG_logged_summarized_OLS_path_to_sigs.pdf"),
+               height = 2.3, width = 2.9, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
 
-<!-- ``` -->
+```
 
 
 <!-- ```{r, fig.width=6, fig.height=4, warning= FALSE} -->
@@ -518,51 +519,83 @@ write.table(as.data.frame(tissues.odds.ratio.lists$neg.tissues),
 
 
 
-<!-- ### Logistic regression predicting pathways from signatures across tissues -->
+### Logistic regression predicting pathways from signatures across tissues
 
-<!-- ```{r} -->
-<!-- tissue.log.coefs.mats.log = pcawg_sig_pathway_int(sigs.input = PCAWG.full.subset.ann.pathways, -->
-<!--                                  pathways.input = PCAWG.pathways.tissues, -->
-<!--                                  interaction_function = get_sig_path_lms,  -->
-<!--                                  path.min.tissues = 30, -->
-<!--                                  p.val.threshold = 0.1, -->
-<!--                                  p.adjust = TRUE, -->
-<!--                                  method = "BH", -->
-<!--                                  sig.log = TRUE, -->
-<!--                                  robust = FALSE, -->
-<!--                                  path.to.sig = FALSE) -->
+```{r}
+tissue.log.coefs.mats.log = pcawg_sig_pathway_int(sigs.input = PCAWG.full.subset.ann.pathways,
+                                 pathways.input = PCAWG.pathways.tissues,
+                                 interaction_function = get_sig_path_lms,
+                                 path.min.tissues = 30,
+                                 p.val.threshold = 0.1,
+                                 p.adjust = TRUE,
+                                 method = "BH",
+                                 sig.log = TRUE,
+                                 robust = FALSE,
+                                 path.to.sig = FALSE)
 
 
-<!-- for (tissue in abundant.tissues) { -->
-<!--     if (any(abs(tissue.log.coefs.mats.log[[tissue]]) > 0) ) { -->
-<!--         cat(tissue, "\n") -->
-<!--         int.heatmap = ggheatmap_wrapper(tissue.log.coefs.mats.log[[tissue]],  -->
-<!--                                         title = tissue) -->
+for (tissue in abundant.tissues) {
+    if (any(abs(tissue.log.coefs.mats.log[[tissue]]) > 0) ) {
+        cat(tissue, "\n")
+        int.heatmap = ggheatmap_wrapper(tissue.log.coefs.mats.log[[tissue]],
+                                        title = tissue)
 
-<!--         ggsave(plot = int.heatmap, -->
-<!--                filename = file.path(fig.dir, "signature_to_pathway",  -->
-<!--                                     "by_tissues", "log_log",  -->
-<!--                                     paste0("PCAWG_", tissue, "_path_tilde_sig.dotplot.png")), -->
-<!--                height = 5, width = 6, bg = "white") -->
-<!--     } -->
-<!-- } -->
+        ggsave(plot = int.heatmap,
+               filename = file.path(fig.dir, "signature_to_pathway",
+                                    "by_tissues", "log_log",
+                                    paste0("PCAWG_", tissue, "_path_tilde_sig.dotplot.png")),
+               height = 5, width = 6, bg = "white")
+    }
+}
 
-<!-- ``` -->
+```
 
-<!-- #### Summarizing the regression of pathways ~ signatures -->
+#### Summarizing the regression of pathways ~ signatures
 
-<!-- ```{r} -->
-<!-- pp.log.log = plot_all_counts(tissue.log.coefs.mats.log, threshold = 0.1, psize = 6, -->
-<!--                              expand.mult = c(0.13, 0.13)) -->
-<!-- print(pp.log.log) -->
+```{r}
+pp.log.log = plot_all_counts(tissue.log.coefs.mats.log, threshold = 0.1, psize = 6,
+                             expand.mult = c(0.13, 0.13))
+print(pp.log.log)
 
-<!-- ggsave(plot = pp.log.log, -->
-<!--                filename = file.path(fig.dir, "signature_to_pathway",  -->
-<!--                                     "by_tissues", "log_log",  -->
-<!--                                     "PCAWG_logged_summarized.png"), -->
-<!--                height = 1.15, width = 1.6, bg = "white") -->
-<!-- ``` -->
+ggsave(plot = pp.log.log,
+               filename = file.path(fig.dir, "signature_to_pathway",
+                                    "by_tissues", "log_log",
+                                    "PCAWG_logged_summarized.png"),
+               height = 1.15, width = 1.6, bg = "white")
+```
 
+
+### Three summaries together
+
+```{r}
+pp.PCAWG.combined.summaries = ggarrange(pp.odds.ratio.unadjusted + ggtitle("Co-occurrence"), 
+          pp.logged + ggtitle("lm(signature ~ pathway)"), 
+          pp.log.log + ggtitle("glm(pathway ~ signature)"), 
+          widths = c(1,1, 0.3),
+          heights = c(1, 1, 0.3),
+          ncol = 1)
+
+pp.PCAWG.combined.summaries = annotate_figure(
+    pp.PCAWG.combined.summaries, top = text_grob("PCAWG signature-pathway analysis summaries", 
+               color = "darkblue", face = "bold", size = 11))
+
+ggsave(plot = pp.PCAWG.combined.summaries,
+               filename = file.path(fig.dir, "PCAWG_combined_summaries_sig_pathway.pdf"),
+               height = 10, width = 4, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+```
+
+
+```{r}
+
+pp.PCAWG.combined.summaries = ggdraw() +
+  draw_plot(pp.odds.ratio.unadjusted + ggtitle("Co-occurrence"), x = 0, y = 0.61, width = 1, height = .4) +
+  draw_plot(pp.logged + ggtitle("lm(signature ~ pathway)"), x = 0, y = .22, width = 1, height = .4) +
+  draw_plot(pp.log.log + ggtitle("glm(pathway ~ signature)"), x = 0, y = 0, width = 0.42, height = 0.22) 
+
+ggsave(plot = pp.PCAWG.combined.summaries,
+               filename = file.path(fig.dir, "PCAWG_combined_summaries_sig_pathway.pdf"),
+               height = 10, width = 4, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+```
 
 
 ### All signatures and pathway mutation heatmaps
